Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <!-- comment -->
+    <title>My Title</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
